# vibecode-scanner

./: .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  cabal.project  vibecode-scanner.cabal
agents/: default.dhall
app/: Main.hs
lib/VibeCode/: Agents.hs  Audit.hs  Cabal.hs  CabalPlan.hs  Logging.hs  Prelude.hs  Scan.hs  Types.hs
lib/VibeCode/Types/: CabalPlan.hs  Dhall.hs  JSON.hs
