cabal-version:      3.4
name:               vibecode-scanner
version:            0.1.0.0
-- synopsis:
-- description:
license:            LGPL-3.0-only
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable vibecode-scanner
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        vibecode-scanner

    hs-source-dirs:   app
    default-language: Haskell2010
