cabal-version:      3.4
name:               vibecode-scanner
version:            0.1.0.0
synopsis:           Vibecode scanner
description:
  This package allows to scan hackage packages and git repos for signs of vibe coding.
license:            LGPL-3.0-only
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de
copyright:          Julian Ospald 2026
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/hasufell/vibecode-scanner.git

common warnings
    ghc-options: -Wall -Wextra

library
    import:           warnings

    if os(windows)
      cpp-options: -DIS_WINDOWS
    exposed-modules:
      VibeCode.Audit
      VibeCode.Agents
      VibeCode.Cabal
      VibeCode.CabalPlan
      VibeCode.Logging
      VibeCode.Scan
      VibeCode.Types
      VibeCode.Types.CabalPlan
      VibeCode.Types.JSON
      VibeCode.Prelude

    -- other-modules:
    -- other-extensions:
    build-depends:
      , Cabal-syntax >= 3.10.3 && < 3.11
      , aeson >= 2.2.4 && < 2.3
      , aeson-pretty >= 0.8.10 && < 0.9
      , base >= 4.18.3 && < 9999
      , bytestring >= 0.11.5 && < 0.12
      , containers >= 0.6.7 && < 0.7
      , directory >= 1.3.8 && < 1.4
      , filepath >= 1.4.301 && < 1.5
      , filepattern >= 0.1.3 && < 0.2
      , generic-lens >= 2.3.0 && < 2.4
      , mtl >= 2.3.1 && < 2.4
      , process >= 1.6.28 && < 1.7
      , safe-exceptions >= 0.1.7 && < 0.2
      , temporary >= 1.3 && < 1.4
      , text >= 2.0.2 && < 2.1
      , topograph >= 1.0.1 && < 1.1
    hs-source-dirs:   lib
    default-language: Haskell2010

executable vibecode-scanner
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      , aeson-pretty ^>=0.8.10
      , base >=4.18.3 && < 9999
      , optparse-applicative ^>=0.19.0.0
      , text >= 2.0.2 && < 2.1
      , vibecode-scanner

    hs-source-dirs:   app
    default-language: Haskell2010
